--- a/index.html
+++ b/index.html
@@ -27,8 +27,50 @@ body {
 <script>
 
 // Generate a Bates distribution of 10 random variables.
-var values = d3.range(1000).map(d3.random.bates(10));
-
+//var values = d3.range(1000).map(d3.random.bates(10));
+var values = [120000
+132799
+130000
+140000
+110000
+120000
+100000
+105000
+115000
+121582.65
+125000
+133000
+109457.78
+140000
+130000
+116000
+128000
+135000
+130000
+126960
+90000
+100000
+100000
+110000
+85000
+117731
+112000
+203000
+100000
+100000
+150000
+115000
+155760
+100000
+138000
+79000
+100000
+85000
+160000
+110000
+105000
+133000
+145000]
 // A formatter for counts.
 var formatCount = d3.format(",.0f");
 
